@@ -12,6 +12,7 @@ Changed
     Dont show carat when host is offline
     Replace nav button text with icons
     Go back to default font
+    Split project restrictions into their own table on frontend
 
 Fixed
     Switching projects in snap broken
